--- a/capacitor-nfc/android/capacitor-nfc/src/main/AndroidManifest.xml
+++ b/capacitor-nfc/android/capacitor-nfc/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 
   <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.adrynov.capacitor.capacitornfc">
-</manifest>
+
+      <uses-permission android:name="android.permission.NFC" />
+  </manifest>
