--- a/capacitor-nfc/android/capacitor-nfc/src/main/AndroidManifest.xml
+++ b/capacitor-nfc/android/capacitor-nfc/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-  <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.adrynov.capacitor.nfc">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.adrynov.capacitor.nfc">
 
-      <uses-permission android:name="android.permission.NFC" />
-  </manifest>
+  <uses-permission android:name="android.permission.NFC" />
+
+</manifest>
