Fix double line in README

--- a/example-app/capacitor.config.json
+++ b/example-app/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "SampleApp",
+  "appId": "com.adrynov.capacitor.examples",
+  "appName": "CapacitorExample",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
