--- a/example-app/android/app/build.gradle
+++ b/example-app/android/app/build.gradle
@@ -3,11 +3,14 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "io.ionic.starter"
+        applicationId "com.adrynov.capacitor.examples"
+
         minSdkVersion 21
         targetSdkVersion 28
+
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -29,12 +32,15 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation project(':capacitor-android')
+    implementation project(':capacitor-cordova-android-plugins')
+
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':capacitor-cordova-android-plugins')
 }
 
 apply from: 'capacitor.build.gradle'
