--- a/example-app/android/app/src/main/AndroidManifest.xml
+++ b/example-app/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.ionic.starter">
+    package="com.adrynov.capacitor.examples">
 
     <application
         android:allowBackup="true"
