--- a/example-app/package.json
+++ b/example-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SampleApp",
+  "name": "S",
   "version": "0.0.2s",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -10,7 +10,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "android": "ionic build && ionic cap sync && ionic cap open android"
+    "android": "ionic build && ionic cap sync && ionic cap open android",
+    "ios": "ionic build && ionic cap sync && ionic cap open ios"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,7 @@
     "@angular/router": "~8.1.2",
     "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1",
+    "@capacitor/ios": "^1.2.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
